why does vcpkg complain?

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,18 +42,18 @@ jobs:
         run: |
           brew update
           brew install libomp openblas fftw mpfr
-      - name: Cache dependencies on Windows
-        if: startsWith(matrix.os, 'windows')
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-dependencies
-        with:
-          path: C:/vcpkg/packages/
-          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles( '**/vcpkg.json' ) }}
-          restore-keys: |
-            ${{ runner.os }}-test-${{ env.cache-name }}-
-            ${{ runner.os }}-test-
-            ${{ runner.os }}-
+      #- name: Cache dependencies on Windows
+    #    if: startsWith(matrix.os, 'windows')
+    #    uses: actions/cache@v2
+    #    env:
+    #      cache-name: cache-dependencies
+    #    with:
+    #      path: C:/vcpkg/packages/
+    #      key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles( '**/vcpkg.json' ) }}
+    #      restore-keys: |
+    #        ${{ runner.os }}-test-${{ env.cache-name }}-
+    #        ${{ runner.os }}-test-
+    #        ${{ runner.os }}-
       - name: Install dependencies on Windows
         if: startsWith(matrix.os, 'windows')
         run: vcpkg install openblas:x64-windows fftw3[core,threads]:x64-windows mpfr:x64-windows --recurse
