--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,8 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubuntu-latest
-          - macOS-latest
+          #- ubuntu-latest
+          #- macOS-latest
           - windows-latest
         compiler:
           - gcc
