--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,10 +72,12 @@ jobs:
       - name: Run examples
         run: make runexamples
   test_windows:
-    name: C - windows-latest - ${{ matrix.compiler }} - ${{ matrix.arch }}
-    runs-on: windows-latest
+    name: C - ${{ matrix.os }} - ${{ matrix.compiler }} - ${{ matrix.arch }}
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os:
+          - windows-latest
         compiler:
           - gcc
         arch:
@@ -104,17 +106,17 @@ jobs:
       - name: Compiler version
         run: ${CC} --version
       #- name: Build assembly
-    #    run: mingw32-make assembly
+    #    run: make assembly
     #  - name: Build library
-    #    run: mingw32-make lib
+    #    run: make lib
     #  - name: Build tests
-    #    run: mingw32-make tests
+    #    run: make tests
     #  - name: Build examples
-    #    run: mingw32-make examples
+    #    run: make examples
     #  - name: Run tests
-    #    run: mingw32-make runtests FT_NUM_THREADS=2
+    #    run: make runtests FT_NUM_THREADS=2
     #  - name: Run examples
-    #    run: mingw32-make runexamples
+    #    run: make runexamples
   docs:
     name: Documentation
     runs-on: macOS-latest
