remove macos for now

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,7 @@ jobs:
       matrix:
         os:
           #- ubuntu-latest
-          - macOS-latest
-          #- windows-latest
+          #- macOS-latest
         compiler:
           - gcc
           - clang
@@ -42,21 +41,6 @@ jobs:
         run: |
           brew update
           brew install libomp openblas fftw mpfr
-      #- name: Cache dependencies on Windows
-    #    if: startsWith(matrix.os, 'windows')
-    #    uses: actions/cache@v2
-    #    env:
-    #      cache-name: cache-dependencies
-    #    with:
-    #      path: C:/vcpkg/packages/
-    #      key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles( '**/vcpkg_manifest/vcpkg.json' ) }}
-    #      restore-keys: |
-    #        ${{ runner.os }}-test-${{ env.cache-name }}-
-    #        ${{ runner.os }}-test-
-    #        ${{ runner.os }}-
-     # - name: Install dependencies on Windows
-    #    if: startsWith(matrix.os, 'windows')
-    #    run: vcpkg install openblas:${{ matrix.arch }}-windows fftw3[core,threads]:${{ matrix.arch }}-windows mpfr:${{ matrix.arch }}-windows --recurse
       - name: Compiler version
         run: ${CC} --version
       - name: Build assembly
@@ -100,22 +84,21 @@ jobs:
             ${{ runner.os }}-test-
             ${{ runner.os }}-
       - name: Install dependencies on Windows
-        if: startsWith(matrix.os, 'windows')
         run: vcpkg install openblas:${{ matrix.arch }}-windows fftw3[core,threads]:${{ matrix.arch }}-windows mpfr:${{ matrix.arch }}-windows --recurse
       - name: Compiler version
         run: ${CC} --version
       #- name: Build assembly
-    #    run: make assembly
+    #    run: mingw32-make assembly
     #  - name: Build library
-    #    run: make lib
+    #    run: mingw32-make lib
     #  - name: Build tests
-    #    run: make tests
+    #    run: mingw32-make tests
     #  - name: Build examples
-    #    run: make examples
+    #    run: mingw32-make examples
     #  - name: Run tests
-    #    run: make runtests FT_NUM_THREADS=2
+    #    run: mingw32-make runtests FT_NUM_THREADS=2
     #  - name: Run examples
-    #    run: make runexamples
+    #    run: mingw32-make runexamples
   docs:
     name: Documentation
     runs-on: macOS-latest
