--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,8 +85,8 @@ jobs:
             ${{ runner.os }}-
       - name: Install dependencies on Windows
         run: vcpkg install openblas:${{ matrix.arch }}-windows fftw3[core,threads]:${{ matrix.arch }}-windows mpfr:${{ matrix.arch }}-windows --recurse
-      #- name: Build assembly
-    #    run: mingw32-make assembly
+      - name: Build assembly
+        run: mingw32-make assembly
     #  - name: Build library
     #    run: mingw32-make lib
     #  - name: Build tests
