--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,8 +89,8 @@ jobs:
         run: vcpkg install openblas:${{ matrix.arch }}-windows fftw3[core,threads]:${{ matrix.arch }}-windows mpfr:${{ matrix.arch }}-windows --recurse
       - name: Build assembly
         run: mingw32-make assembly
-    #  - name: Build library
-    #    run: mingw32-make lib
+      - name: Build library
+        run: mingw32-make lib
     #  - name: Build tests
     #    run: mingw32-make tests
     #  - name: Build examples
