--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,11 +93,10 @@ jobs:
       - name: Build assembly
         run: mingw32-make assembly
       - name: Build library
-        run: mingw32-make lib
-      - name: Locate dir
         run: |
-          cd c:\vcpkg\packages\x64-windows
+          cd c:\vcpkg\packages\
           ls -all
+          mingw32-make lib
     #  - name: Build tests
     #    run: mingw32-make tests
     #  - name: Build examples
