--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,6 +96,7 @@ jobs:
         run: |
           cd c:\vcpkg\packages\
           ls
+          cd c:\vcpkg\packages\openblas_x64-windows
           mingw32-make lib
     #  - name: Build tests
     #    run: mingw32-make tests
