--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,13 +100,9 @@ jobs:
           ls
           cd c:\vcpkg\packages\openblas_x64-windows\include
           ls
+          cd c:\vcpkg\packages\openblas_x64-windows\include\openblas
+          ls
           mingw32-make lib
-      - name: Find directories
-        run: |
-          cd c:\vcpkg\packages\
-          ls
-          cd c:\vcpkg\packages\openblas_x64-windows
-          ls
     #  - name: Build tests
     #    run: mingw32-make tests
     #  - name: Build examples
