--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,7 +93,16 @@ jobs:
       - name: Build assembly
         run: mingw32-make assembly
       - name: Build library
-        run: mingw32-make lib
+        run: |
+          cd c:\vcpkg\
+          ls
+          cd c:\vcpkg\packages\
+          ls
+          cd c:\vcpkg\packages\mpfr_${{ matrix.arch }}-windows
+          ls
+          cd c:\vcpkg\packages\mpfr_${{ matrix.arch }}-windows\include
+          ls
+          mingw32-make lib
     #  - name: Build tests
     #    run: mingw32-make tests
     #  - name: Build examples
