--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,7 +102,7 @@ jobs:
       - name: Build examples
         run: mingw32-make examples
       - name: Run tests
-        run: mingw32-make runtests FT_NUM_THREADS=2
+        run: mingw32-make runtests
       - name: Run examples
         run: mingw32-make runexamples
   docs:
