--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,10 +101,10 @@ jobs:
         run: mingw32-make tests
       - name: Build examples
         run: mingw32-make examples
-      - name: Run tests
-        run: mingw32-make runtests
       - name: Run examples
         run: mingw32-make runexamples
+      - name: Run tests
+        run: mingw32-make runtests FT_NUM_THREADS=2
   docs:
     name: Documentation
     runs-on: macOS-latest
