macOS can't handle quadmath with native gcc

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,13 +41,14 @@ jobs:
           brew install libomp openblas fftw mpfr
       - name: Compiler version
         run: ${CC} --version
+      - name: Configure environment for quadmath
+        if: startsWith(matrix.os, 'ubuntu') && startsWith(matrix.compiler, 'gcc')
+        run: echo "FT_QUADMATH=1" >> $GITHUB_ENV
       - name: Configure environment for coverage
         if: startsWith(matrix.os, 'macOS') && startsWith(matrix.compiler, 'gcc')
         run: |
           echo "COV=gcov" >> $GITHUB_ENV
           echo "FT_COVERAGE=1" >> $GITHUB_ENV
-      - if: startsWith(matrix.compiler, 'gcc')
-        run: echo "FT_QUADMATH=1" >> $GITHUB_ENV
       - name: Build assembly
         run: make assembly
       - name: Build library
