--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       fail-fast: false
     env:
       CC: ${{ matrix.compiler }}
-      LD_LIBRARY_PATH: .
+      LD_LIBRARY_PATH: $LD_LIBRARY_PATH:.
     steps:
       - uses: actions/checkout@v2
       - name: Install dependencies on ubuntu
